// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Random grids to render render 1`] = `
"+---+---------------+
| 1 | 3   3   3   3 |
|   +---+-------+   |
| 1   1 | 2   2 | 3 |
|   +---+       |   |
| 1 | 2   2   2 | 3 |
|   +-----------+---+
| 1 | 0   0   0   0 |
|   +---+           |
| 1   1 | 0   0   0 |
+-------+-----------+

room 0 size=7 cells=16,17,18,19,22,23,24
room 1 size=7 cells=0,5,6,10,15,20,21
room 2 size=5 cells=7,8,11,12,13
room 3 size=6 cells=1,2,3,4,9,14"
`;

exports[`Random grids to render render 2`] = `
"+---+---------------+
| [93m1[39m | [34m3[39m   [34m3[39m   [34m3[39m   [34m3[39m |
|   +---+-------+   |
| [93m1[39m   [93m1[39m | [43m[30m2[39m[49m   [43m[30m2[39m[49m | [34m3[39m |
|   +---+       |   |
| [93m1[39m | [43m[30m2[39m[49m   [43m[30m2[39m[49m   [43m[30m2[39m[49m | [34m3[39m |
|   +-----------+---+
| [93m1[39m | [42m[30m0[39m[49m   [42m[30m0[39m[49m   [42m[30m0[39m[49m   [42m[30m0[39m[49m |
|   +---+           |
| [93m1[39m   [93m1[39m | [42m[30m0[39m[49m   [42m[30m0[39m[49m   [42m[30m0[39m[49m |
+-------+-----------+

room 0 size=7 cells=16,17,18,19,22,23,24
room 1 size=7 cells=0,5,6,10,15,20,21
room 2 size=5 cells=7,8,11,12,13
room 3 size=6 cells=1,2,3,4,9,14"
`;

exports[`Random grids to render render 3`] = `
"+---------------------------+-----------+
| 0   0   0   0   0   0   0 | 2   2   2 |
|           +---+           |           |
| 0   0   0 | 1 | 0   0   0 | 2   2   2 |
+---+   +---+   +---+       +---+       |
| 1 | 0 | 1   1   1 | 0   0   0 | 2   2 |
|   +---+           +-----------+-------+
| 1   1   1   1   1 | 3   3   3   3   3 |
|                   |                   |
| 1   1   1   1   1 | 3   3   3   3   3 |
+-------------------+-------------------+

room 0 size=17 cells=0,1,2,3,4,5,6,10,11,12,14,15,16,21,25,26,27
room 1 size=15 cells=13,20,22,23,24,30,31,32,33,34,40,41,42,43,44
room 2 size=8 cells=7,8,9,17,18,19,28,29
room 3 size=10 cells=35,36,37,38,39,45,46,47,48,49"
`;

exports[`Random grids to render render 4`] = `
"+---------------------------+-----------+
| [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m | [44m[30m2[39m[49m   [44m[30m2[39m[49m   [44m[30m2[39m[49m |
|           +---+           |           |
| [96m0[39m   [96m0[39m   [96m0[39m | [94m1[39m | [96m0[39m   [96m0[39m   [96m0[39m | [44m[30m2[39m[49m   [44m[30m2[39m[49m   [44m[30m2[39m[49m |
+---+   +---+   +---+       +---+       |
| [94m1[39m | [96m0[39m | [94m1[39m   [94m1[39m   [94m1[39m | [96m0[39m   [96m0[39m   [96m0[39m | [44m[30m2[39m[49m   [44m[30m2[39m[49m |
|   +---+           +-----------+-------+
| [94m1[39m   [94m1[39m   [94m1[39m   [94m1[39m   [94m1[39m | [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m |
|                   |                   |
| [94m1[39m   [94m1[39m   [94m1[39m   [94m1[39m   [94m1[39m | [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m |
+-------------------+-------------------+

room 0 size=17 cells=0,1,2,3,4,5,6,10,11,12,14,15,16,21,25,26,27
room 1 size=15 cells=13,20,22,23,24,30,31,32,33,34,40,41,42,43,44
room 2 size=8 cells=7,8,9,17,18,19,28,29
room 3 size=10 cells=35,36,37,38,39,45,46,47,48,49"
`;

exports[`Random grids to render render 5`] = `
"+-----------+-------+
| 1   1   1 | 3   3 |
|           |       |
| 1   1   1 | 3   3 |
|   +-------+---+   |
| 1 | 2   2   2 | 3 |
|   |       +---+   |
| 1 | 2   2 | 3   3 |
|   |       |       |
| 1 | 2   2 | 3   3 |
|   |       |       |
| 1 | 2   2 | 3   3 |
|   +---+   +---+   |
| 1   1 | 2 | 0 | 3 |
+-------+   |   |   |
| 0   0 | 2 | 0 | 3 |
|       +---+   +---+
| 0   0   0   0   0 |
|                   |
| 0   0   0   0   0 |
+-------------------+

room 0 size=14 cells=33,35,36,38,40,41,42,43,44,45,46,47,48,49
room 1 size=12 cells=0,1,2,5,6,7,10,15,20,25,30,31
room 2 size=11 cells=11,12,13,16,17,21,22,26,27,32,37
room 3 size=13 cells=3,4,8,9,14,18,19,23,24,28,29,34,39"
`;

exports[`Random grids to render render 6`] = `
"+-----------+-------+
| [103m[30m1[39m[49m   [103m[30m1[39m[49m   [103m[30m1[39m[49m | [31m3[39m   [31m3[39m |
|           |       |
| [103m[30m1[39m[49m   [103m[30m1[39m[49m   [103m[30m1[39m[49m | [31m3[39m   [31m3[39m |
|   +-------+---+   |
| [103m[30m1[39m[49m | [106m[30m2[39m[49m   [106m[30m2[39m[49m   [106m[30m2[39m[49m | [31m3[39m |
|   |       +---+   |
| [103m[30m1[39m[49m | [106m[30m2[39m[49m   [106m[30m2[39m[49m | [31m3[39m   [31m3[39m |
|   |       |       |
| [103m[30m1[39m[49m | [106m[30m2[39m[49m   [106m[30m2[39m[49m | [31m3[39m   [31m3[39m |
|   |       |       |
| [103m[30m1[39m[49m | [106m[30m2[39m[49m   [106m[30m2[39m[49m | [31m3[39m   [31m3[39m |
|   +---+   +---+   |
| [103m[30m1[39m[49m   [103m[30m1[39m[49m | [106m[30m2[39m[49m | [33m0[39m | [31m3[39m |
+-------+   |   |   |
| [33m0[39m   [33m0[39m | [106m[30m2[39m[49m | [33m0[39m | [31m3[39m |
|       +---+   +---+
| [33m0[39m   [33m0[39m   [33m0[39m   [33m0[39m   [33m0[39m |
|                   |
| [33m0[39m   [33m0[39m   [33m0[39m   [33m0[39m   [33m0[39m |
+-------------------+

room 0 size=14 cells=33,35,36,38,40,41,42,43,44,45,46,47,48,49
room 1 size=12 cells=0,1,2,5,6,7,10,15,20,25,30,31
room 2 size=11 cells=11,12,13,16,17,21,22,26,27,32,37
room 3 size=13 cells=3,4,8,9,14,18,19,23,24,28,29,34,39"
`;

exports[`Random grids to render render 7`] = `
"+-------------------+---------------+---+
| 1   1   1   1   1 | 2   2   2   2 | 0 |
|                   |               |   |
| 1   1   1   1   1 | 2   2   2   2 | 0 |
|                   |               |   |
| 1   1   1   1   1 | 2   2   2   2 | 0 |
|               +---+               |   |
| 1   1   1   1 | 2   2   2   2   2 | 0 |
|       +---+   |           +-------+   |
| 1   1 | 2 | 1 | 2   2   2 | 0   0   0 |
+-------+   +---+       +---+           |
| 3   3 | 2   2   2   2 | 0   0   0   0 |
|       |               |               |
| 3   3 | 2   2   2   2 | 0   0   0   0 |
|       +-------+   +---+               |
| 3   3   3   3 | 2 | 0   0   0   0   0 |
|           +---+   +---+               |
| 3   3   3 | 2   2   2 | 0   0   0   0 |
|   +-------+-----------+               |
| 3 | 0   0   0   0   0   0   0   0   0 |
+---+-----------------------------------+

room 0 size=33 cells=9,19,29,39,47,48,49,56,57,58,59,66,67,68,69,75,76,77,78,79,86,87,88,89,91,92,93,94,95,96,97,98,99
room 1 size=22 cells=0,1,2,3,4,10,11,12,13,14,20,21,22,23,24,30,31,32,33,40,41,43
room 2 size=33 cells=5,6,7,8,15,16,17,18,25,26,27,28,34,35,36,37,38,42,44,45,46,52,53,54,55,62,63,64,65,74,83,84,85
room 3 size=12 cells=50,51,60,61,70,71,72,73,80,81,82,90"
`;

exports[`Random grids to render render 8`] = `
"+-------------------+---------------+---+
| [43m[30m1[39m[49m   [43m[30m1[39m[49m   [43m[30m1[39m[49m   [43m[30m1[39m[49m   [43m[30m1[39m[49m | [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m | [102m[30m0[39m[49m |
|                   |               |   |
| [43m[30m1[39m[49m   [43m[30m1[39m[49m   [43m[30m1[39m[49m   [43m[30m1[39m[49m   [43m[30m1[39m[49m | [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m | [102m[30m0[39m[49m |
|                   |               |   |
| [43m[30m1[39m[49m   [43m[30m1[39m[49m   [43m[30m1[39m[49m   [43m[30m1[39m[49m   [43m[30m1[39m[49m | [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m | [102m[30m0[39m[49m |
|               +---+               |   |
| [43m[30m1[39m[49m   [43m[30m1[39m[49m   [43m[30m1[39m[49m   [43m[30m1[39m[49m | [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m | [102m[30m0[39m[49m |
|       +---+   |           +-------+   |
| [43m[30m1[39m[49m   [43m[30m1[39m[49m | [42m[30m2[39m[49m | [43m[30m1[39m[49m | [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m | [102m[30m0[39m[49m   [102m[30m0[39m[49m   [102m[30m0[39m[49m |
+-------+   +---+       +---+           |
| [41m[30m3[39m[49m   [41m[30m3[39m[49m | [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m | [102m[30m0[39m[49m   [102m[30m0[39m[49m   [102m[30m0[39m[49m   [102m[30m0[39m[49m |
|       |               |               |
| [41m[30m3[39m[49m   [41m[30m3[39m[49m | [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m | [102m[30m0[39m[49m   [102m[30m0[39m[49m   [102m[30m0[39m[49m   [102m[30m0[39m[49m |
|       +-------+   +---+               |
| [41m[30m3[39m[49m   [41m[30m3[39m[49m   [41m[30m3[39m[49m   [41m[30m3[39m[49m | [42m[30m2[39m[49m | [102m[30m0[39m[49m   [102m[30m0[39m[49m   [102m[30m0[39m[49m   [102m[30m0[39m[49m   [102m[30m0[39m[49m |
|           +---+   +---+               |
| [41m[30m3[39m[49m   [41m[30m3[39m[49m   [41m[30m3[39m[49m | [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m | [102m[30m0[39m[49m   [102m[30m0[39m[49m   [102m[30m0[39m[49m   [102m[30m0[39m[49m |
|   +-------+-----------+               |
| [41m[30m3[39m[49m | [102m[30m0[39m[49m   [102m[30m0[39m[49m   [102m[30m0[39m[49m   [102m[30m0[39m[49m   [102m[30m0[39m[49m   [102m[30m0[39m[49m   [102m[30m0[39m[49m   [102m[30m0[39m[49m   [102m[30m0[39m[49m |
+---+-----------------------------------+

room 0 size=33 cells=9,19,29,39,47,48,49,56,57,58,59,66,67,68,69,75,76,77,78,79,86,87,88,89,91,92,93,94,95,96,97,98,99
room 1 size=22 cells=0,1,2,3,4,10,11,12,13,14,20,21,22,23,24,30,31,32,33,40,41,43
room 2 size=33 cells=5,6,7,8,15,16,17,18,25,26,27,28,34,35,36,37,38,42,44,45,46,52,53,54,55,62,63,64,65,74,83,84,85
room 3 size=12 cells=50,51,60,61,70,71,72,73,80,81,82,90"
`;

exports[`Random grids to render render 9`] = `
"+--------+----+---------+
| 1    1 | 12 |  4    4 |
+---+----+----+----+----+
| 5 | 15 |  6    6 | 13 |
+---+----+----+----+    |
| 9 |  0 |  7 |  8 | 13 |
+---+----+----+    +----+
| 2    2 | 10 |  8 | 11 |
|   +----+----+----+    |
| 2 |  3    3 | 14 | 11 |
+---+---------+----+----+

room 0 size=1 cells=11
room 1 size=2 cells=0,1
room 2 size=3 cells=15,16,20
room 3 size=2 cells=21,22
room 4 size=2 cells=3,4
room 5 size=1 cells=5
room 6 size=2 cells=7,8
room 7 size=1 cells=12
room 8 size=2 cells=13,18
room 9 size=1 cells=10
room 10 size=1 cells=17
room 11 size=2 cells=19,24
room 12 size=1 cells=2
room 13 size=2 cells=9,14
room 14 size=1 cells=23
room 15 size=1 cells=6"
`;

exports[`Random grids to render render 10`] = `
"+--------+----+---------+
| [36m1[39m    [36m1[39m | [31m12[39m |  [93m4[39m    [93m4[39m |
+---+----+----+----+----+
| [101m[30m5[39m[49m | [95m15[39m |  [32m6[39m    [32m6[39m | [92m13[39m |
+---+----+----+----+    |
| [96m9[39m |  [91m0[39m |  [42m[30m7[39m[49m |  [104m[30m8[39m[49m | [92m13[39m |
+---+----+----+    +----+
| [102m[30m2[39m[49m    [102m[30m2[39m[49m | [103m[30m10[39m[49m |  [104m[30m8[39m[49m | [94m11[39m |
|   +----+----+----+    |
| [102m[30m2[39m[49m |  [105m[30m3[39m[49m    [105m[30m3[39m[49m | [45m[30m14[39m[49m | [94m11[39m |
+---+---------+----+----+

room 0 size=1 cells=11
room 1 size=2 cells=0,1
room 2 size=3 cells=15,16,20
room 3 size=2 cells=21,22
room 4 size=2 cells=3,4
room 5 size=1 cells=5
room 6 size=2 cells=7,8
room 7 size=1 cells=12
room 8 size=2 cells=13,18
room 9 size=1 cells=10
room 10 size=1 cells=17
room 11 size=2 cells=19,24
room 12 size=1 cells=2
room 13 size=2 cells=9,14
room 14 size=1 cells=23
room 15 size=1 cells=6"
`;

exports[`Random grids to render render 11`] = `
"+----+--------------+---+-------+---------+----+
| 15 |  1    1    1 | 7 | 2   2 | 10   10 |  0 |
+----+---------+----+   |       |    +----+    |
|  8 | 12   12 |  7   7 | 2   2 | 10 | 14 |  0 |
|    +---------+----+---+-------+----+    |    |
|  8 |  6    6 | 13 | 9   9   9 | 14   14 |  0 |
|    +----+----+----+   +-------+---------+    |
|  8 |  5 |  3    3 | 9 | 4   4 | 11   11 |  0 |
+----+    |         +---+       |         +----+
|  5    5 |  3    3 | 4   4   4 | 11   11   11 |
+---------+---------+-----------+--------------+

room 0 size=4 cells=9,19,29,39
room 1 size=3 cells=1,2,3
room 2 size=4 cells=5,6,15,16
room 3 size=4 cells=32,33,42,43
room 4 size=5 cells=35,36,44,45,46
room 5 size=3 cells=31,40,41
room 6 size=2 cells=21,22
room 7 size=3 cells=4,13,14
room 8 size=3 cells=10,20,30
room 9 size=4 cells=24,25,26,34
room 10 size=3 cells=7,8,17
room 11 size=5 cells=37,38,47,48,49
room 12 size=2 cells=11,12
room 13 size=1 cells=23
room 14 size=3 cells=18,27,28
room 15 size=1 cells=0"
`;

exports[`Random grids to render render 12`] = `
"+----+--------------+---+-------+---------+----+
| [106m[30m15[39m[49m |  [102m[30m1[39m[49m    [102m[30m1[39m[49m    [102m[30m1[39m[49m | [93m7[39m | [44m[30m2[39m[49m   [44m[30m2[39m[49m | [101m[30m10[39m[49m   [101m[30m10[39m[49m |  [91m0[39m |
+----+---------+----+   |       |    +----+    |
|  [36m8[39m | [104m[30m12[39m[49m   [104m[30m12[39m[49m |  [93m7[39m   [93m7[39m | [44m[30m2[39m[49m   [44m[30m2[39m[49m | [101m[30m10[39m[49m | [92m14[39m |  [91m0[39m |
|    +---------+----+---+-------+----+    |    |
|  [36m8[39m |  [46m[30m6[39m[49m    [46m[30m6[39m[49m | [34m13[39m | [41m[30m9[39m[49m   [41m[30m9[39m[49m   [41m[30m9[39m[49m | [92m14[39m   [92m14[39m |  [91m0[39m |
|    +----+----+----+   +-------+---------+    |
|  [36m8[39m |  [33m5[39m |  [105m[30m3[39m[49m    [105m[30m3[39m[49m | [41m[30m9[39m[49m | [31m4[39m   [31m4[39m | [94m11[39m   [94m11[39m |  [91m0[39m |
+----+    |         +---+       |         +----+
|  [33m5[39m    [33m5[39m |  [105m[30m3[39m[49m    [105m[30m3[39m[49m | [31m4[39m   [31m4[39m   [31m4[39m | [94m11[39m   [94m11[39m   [94m11[39m |
+---------+---------+-----------+--------------+

room 0 size=4 cells=9,19,29,39
room 1 size=3 cells=1,2,3
room 2 size=4 cells=5,6,15,16
room 3 size=4 cells=32,33,42,43
room 4 size=5 cells=35,36,44,45,46
room 5 size=3 cells=31,40,41
room 6 size=2 cells=21,22
room 7 size=3 cells=4,13,14
room 8 size=3 cells=10,20,30
room 9 size=4 cells=24,25,26,34
room 10 size=3 cells=7,8,17
room 11 size=5 cells=37,38,47,48,49
room 12 size=2 cells=11,12
room 13 size=1 cells=23
room 14 size=3 cells=18,27,28
room 15 size=1 cells=0"
`;

exports[`Random grids to render render 13`] = `
"+---------+--------------+
|  8    8 |  0    0    0 |
|         +--------------+
|  8    8 |  4    4    4 |
+----+    +----+---------+
| 14 |  8 | 13 | 12   12 |
|    +----+    +----+    |
| 14 | 13   13 |  9 | 12 |
|    +----+----+    +----+
| 14 |  7 | 10 |  9 |  2 |
+----+    |    |    |    |
|  7    7 | 10 |  9 |  2 |
+----+----+----+----+----+
|  3 | 15 |  1    1 |  5 |
|    |    |    +----+    |
|  3 | 15 |  1 |  5    5 |
|    +----+----+---------+
|  3 | 11   11 |  6    6 |
|    |         |         |
|  3 | 11   11 |  6    6 |
+----+---------+---------+

room 0 size=3 cells=2,3,4
room 1 size=3 cells=32,33,37
room 2 size=2 cells=24,29
room 3 size=4 cells=30,35,40,45
room 4 size=3 cells=7,8,9
room 5 size=3 cells=34,38,39
room 6 size=4 cells=43,44,48,49
room 7 size=3 cells=21,25,26
room 8 size=5 cells=0,1,5,6,11
room 9 size=3 cells=18,23,28
room 10 size=2 cells=22,27
room 11 size=4 cells=41,42,46,47
room 12 size=3 cells=13,14,19
room 13 size=3 cells=12,16,17
room 14 size=3 cells=10,15,20
room 15 size=2 cells=31,36"
`;

exports[`Random grids to render render 14`] = `
"+---------+--------------+
|  [96m8[39m    [96m8[39m |  [92m0[39m    [92m0[39m    [92m0[39m |
|         +--------------+
|  [96m8[39m    [96m8[39m |  [101m[30m4[39m[49m    [101m[30m4[39m[49m    [101m[30m4[39m[49m |
+----+    +----+---------+
| [32m14[39m |  [96m8[39m | [33m13[39m | [93m12[39m   [93m12[39m |
|    +----+    +----+    |
| [32m14[39m | [33m13[39m   [33m13[39m |  [43m[30m9[39m[49m | [93m12[39m |
|    +----+----+    +----+
| [32m14[39m |  [94m7[39m | [105m[30m10[39m[49m |  [43m[30m9[39m[49m |  [91m2[39m |
+----+    |    |    |    |
|  [94m7[39m    [94m7[39m | [105m[30m10[39m[49m |  [43m[30m9[39m[49m |  [91m2[39m |
+----+----+----+----+----+
|  [35m3[39m | [46m[30m15[39m[49m |  [95m1[39m    [95m1[39m |  [104m[30m5[39m[49m |
|    |    |    +----+    |
|  [35m3[39m | [46m[30m15[39m[49m |  [95m1[39m |  [104m[30m5[39m[49m    [104m[30m5[39m[49m |
|    +----+----+---------+
|  [35m3[39m | [45m[30m11[39m[49m   [45m[30m11[39m[49m |  [42m[30m6[39m[49m    [42m[30m6[39m[49m |
|    |         |         |
|  [35m3[39m | [45m[30m11[39m[49m   [45m[30m11[39m[49m |  [42m[30m6[39m[49m    [42m[30m6[39m[49m |
+----+---------+---------+

room 0 size=3 cells=2,3,4
room 1 size=3 cells=32,33,37
room 2 size=2 cells=24,29
room 3 size=4 cells=30,35,40,45
room 4 size=3 cells=7,8,9
room 5 size=3 cells=34,38,39
room 6 size=4 cells=43,44,48,49
room 7 size=3 cells=21,25,26
room 8 size=5 cells=0,1,5,6,11
room 9 size=3 cells=18,23,28
room 10 size=2 cells=22,27
room 11 size=4 cells=41,42,46,47
room 12 size=3 cells=13,14,19
room 13 size=3 cells=12,16,17
room 14 size=3 cells=10,15,20
room 15 size=2 cells=31,36"
`;

exports[`Random grids to render render 15`] = `
"+--------------+------------------------+---------+
|  4    4    4 |  0    0    0    0    0 |  9    9 |
|              +----+    +----+    +----+---------+
|  4    4    4 |  1 |  0 | 15 |  0 | 12   12   12 |
|    +---------+    +----+    +----+----+         |
|  4 |  1    1    1 | 10 | 15   15   15 | 12   12 |
+----+              |    |              |         |
|  2 |  1    1    1 | 10 | 15   15   15 | 12   12 |
|    +----+---------+    +----+---------+---------+
|  2    2 | 10   10   10   10 |  6    6    6    6 |
|    +----+----+--------------+----+----+         |
|  2 |  8    8 |  7    7    7 |  5 | 11 |  6    6 |
|    +----+    +----+    +----+    |    +----+    |
|  2 | 13 |  8    8 |  7 |  5    5 | 11   11 |  6 |
+----+    +----+    |    |         +----+    +----+
| 13   13   13 |  8 |  7 |  5    5    5 | 11   11 |
|    +---------+----+----+    +---------+----+    |
| 13 |  3    3    3    3 |  5 | 14   14   14 | 11 |
|    |              +----+----+         +----+    |
| 13 |  3    3    3 | 14   14   14   14 | 11   11 |
+----+--------------+-------------------+---------+

room 0 size=7 cells=3,4,5,6,7,14,16
room 1 size=7 cells=13,21,22,23,31,32,33
room 2 size=5 cells=30,40,41,50,60
room 3 size=7 cells=81,82,83,84,91,92,93
room 4 size=7 cells=0,1,2,10,11,12,20
room 5 size=7 cells=56,65,66,75,76,77,85
room 6 size=7 cells=46,47,48,49,58,59,69
room 7 size=5 cells=53,54,55,64,74
room 8 size=5 cells=51,52,62,63,73
room 9 size=2 cells=8,9
room 10 size=6 cells=24,34,42,43,44,45
room 11 size=8 cells=57,67,68,78,79,89,98,99
room 12 size=7 cells=17,18,19,28,29,38,39
room 13 size=6 cells=61,70,71,72,80,90
room 14 size=7 cells=86,87,88,94,95,96,97
room 15 size=7 cells=15,25,26,27,35,36,37"
`;

exports[`Random grids to render render 16`] = `
"+--------------+------------------------+---------+
|  [101m[30m4[39m[49m    [101m[30m4[39m[49m    [101m[30m4[39m[49m |  [95m0[39m    [95m0[39m    [95m0[39m    [95m0[39m    [95m0[39m |  [92m9[39m    [92m9[39m |
|              +----+    +----+    +----+---------+
|  [101m[30m4[39m[49m    [101m[30m4[39m[49m    [101m[30m4[39m[49m |  [94m1[39m |  [95m0[39m | [33m15[39m |  [95m0[39m | [93m12[39m   [93m12[39m   [93m12[39m |
|    +---------+    +----+    +----+----+         |
|  [101m[30m4[39m[49m |  [94m1[39m    [94m1[39m    [94m1[39m | [105m[30m10[39m[49m | [33m15[39m   [33m15[39m   [33m15[39m | [93m12[39m   [93m12[39m |
+----+              |    |              |         |
|  [104m[30m2[39m[49m |  [94m1[39m    [94m1[39m    [94m1[39m | [105m[30m10[39m[49m | [33m15[39m   [33m15[39m   [33m15[39m | [93m12[39m   [93m12[39m |
|    +----+---------+    +----+---------+---------+
|  [104m[30m2[39m[49m    [104m[30m2[39m[49m | [105m[30m10[39m[49m   [105m[30m10[39m[49m   [105m[30m10[39m[49m   [105m[30m10[39m[49m |  [96m6[39m    [96m6[39m    [96m6[39m    [96m6[39m |
|    +----+----+--------------+----+----+         |
|  [104m[30m2[39m[49m |  [34m8[39m    [34m8[39m |  [102m[30m7[39m[49m    [102m[30m7[39m[49m    [102m[30m7[39m[49m |  [32m5[39m | [31m11[39m |  [96m6[39m    [96m6[39m |
|    +----+    +----+    +----+    |    +----+    |
|  [104m[30m2[39m[49m | [41m[30m13[39m[49m |  [34m8[39m    [34m8[39m |  [102m[30m7[39m[49m |  [32m5[39m    [32m5[39m | [31m11[39m   [31m11[39m |  [96m6[39m |
+----+    +----+    |    |         +----+    +----+
| [41m[30m13[39m[49m   [41m[30m13[39m[49m   [41m[30m13[39m[49m |  [34m8[39m |  [102m[30m7[39m[49m |  [32m5[39m    [32m5[39m    [32m5[39m | [31m11[39m   [31m11[39m |
|    +---------+----+----+    +---------+----+    |
| [41m[30m13[39m[49m |  [46m[30m3[39m[49m    [46m[30m3[39m[49m    [46m[30m3[39m[49m    [46m[30m3[39m[49m |  [32m5[39m | [106m[30m14[39m[49m   [106m[30m14[39m[49m   [106m[30m14[39m[49m | [31m11[39m |
|    |              +----+----+         +----+    |
| [41m[30m13[39m[49m |  [46m[30m3[39m[49m    [46m[30m3[39m[49m    [46m[30m3[39m[49m | [106m[30m14[39m[49m   [106m[30m14[39m[49m   [106m[30m14[39m[49m   [106m[30m14[39m[49m | [31m11[39m   [31m11[39m |
+----+--------------+-------------------+---------+

room 0 size=7 cells=3,4,5,6,7,14,16
room 1 size=7 cells=13,21,22,23,31,32,33
room 2 size=5 cells=30,40,41,50,60
room 3 size=7 cells=81,82,83,84,91,92,93
room 4 size=7 cells=0,1,2,10,11,12,20
room 5 size=7 cells=56,65,66,75,76,77,85
room 6 size=7 cells=46,47,48,49,58,59,69
room 7 size=5 cells=53,54,55,64,74
room 8 size=5 cells=51,52,62,63,73
room 9 size=2 cells=8,9
room 10 size=6 cells=24,34,42,43,44,45
room 11 size=8 cells=57,67,68,78,79,89,98,99
room 12 size=7 cells=17,18,19,28,29,38,39
room 13 size=6 cells=61,70,71,72,80,90
room 14 size=7 cells=86,87,88,94,95,96,97
room 15 size=7 cells=15,25,26,27,35,36,37"
`;
